--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     <li><a href="https://Wenjia-Song.github.io/assignment03/assignment03.html">Assignment03</a >
     <li><a href="https://Wenjia-Song.github.io/assignment04/puzzle.html">Assignment04</a >
     <li><a href="https://Wenjia-Song.github.io/assignment05/assignment05.html">Assignment05</a >
-    <li><a href="https://www.figma.com/file/T6CkEht3X0lBgg3qiEkyLL/Design-and-Code-desktop?node-id=0%3A1">Figma Prototype (desktop)</a >
-    <li><a href="https://www.figma.com/file/3fwWRmyszGUaOHkGohSmhj/Design-%26Code-(mobile)?node-id=0%3A1">Figma Prototype (mobile)</a >
-    <li><a href="https://Wenjia-Song.github.io/assignment06/assignment06.html">Assignment06</a >
+    <li><a href="https://www.figma.com/file/T6CkEht3X0lBgg3qiEkyLL/Design-and-Code-desktop?node-id=0%3A1">Assignment06 [Figma Prototype(desktop)]</a >
+    <li><a href="https://www.figma.com/file/3fwWRmyszGUaOHkGohSmhj/Design-%26Code-(mobile)?node-id=0%3A1">Assignment06 [Figma Prototype(mobile)]</a >
+    <li><a href="https://Wenjia-Song.github.io/assignment06/assignment06.html">Assignment06 (Website)</a >
     <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment07">Assignment07</a>
-    <li><a href="https://github.com/Wenjia-Song/Wenjia-Song.github.io/tree/master/assignment07">Assignment08</a>
-    <li><a href="https://Wenjia-Song.github.io/天台胡同/homepage.html">Assignment09</a>
+    <li><a href="https://www.figma.com/file/eT8MXJdqTFuRDNx0FzGRKY/%E5%A4%A9%E5%8F%B0%E8%83%A1%E5%90%8C?node-id=0%3A1">Assignment08 (Figma prototype)</a>
+    <li><a href="https://Wenjia-Song.github.io/assignment06/assignment07.html">Assignment08 (usability)</a>
+    <li><a href="https://Wenjia-Song.github.io/天台胡同/homepage.html">Assignment09 (final project)</a>
   </ul>
 </body> 
 </html>
