--- a/天台胡同/price.html
+++ b/天台胡同/price.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MP5NLSV"></script>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5FXFJ6H');</script>
+	<!-- End Google Tag Manager -->
+
 		<!-- Basic Page Needs
 	  ================================================== -->
 		<meta charset="utf-8">
@@ -32,7 +39,10 @@
 		<script src="TileLayer.Grayscale.js"></script>
 </head>
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5FXFJ6H"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="wrap-body">
 	<nav class="wrap-menu">
 		<div class="zerogrid">
@@ -58,7 +68,6 @@
 						</ul>	
 						<li><a href="price.html">价格</a></li>
 						<li><a href="comment.html">评论</a></li>
-					
 			</ul>
 		</div>
 	</nav>
