--- a/assignment02/www/index.html
+++ b/assignment02/www/index.html
@@ -294,7 +294,7 @@
             var postEntry = $('<div class="col-1-3"></div>');
             var wrap_col_item = $('<div class="wrap-col item"></div>');
             var portfolio_box = $('<a class="portfolio-box" href="#!"></a>');
-            var portfolio_img = $('<img class="img-fluid" src="' + value.guid + '" alt="">');
+            var portfolio_img = $('<img class="img-fluid" src="' + value.img-url + '" alt="">');
             var item_content = $('<a class="item-content" href="#!"></a>');
             var postShop = $('<div class="h3">' + value.shop + '</div>');
             var postFood = $('<div class="span">' + value.food + '</div>');
